Changelog
=========

0.4.9 (unreleased)
------------------

- Nothing changed yet.


0.4.8 (2012-05-07)
------------------

- promo-materials: don't hard-code document description and disclaimer [thomasw] #4672
- Added a more news / more events link to the telescope view [thomasw] #4648

0.4.7 (2012-04-23)
------------------

- News and Events on homepage: The balls now show which item is selected [thomasw]
- Proper display and sorting of events [thomasw]
- Added custom footer with links to OSHA main [thomasw]

0.4.6 (2012-04-19)
------------------

- Bugfix for news fetcher on homepage [thomasw] 


0.4.5 (2012-04-19)
------------------

- Strip links and some formatting from the news on the homepage [thomasw|

0.4.4 (2012-04-19)
------------------

- Partner application form [pilz]

0.4.3 (2012-04-19)
------------------

- Post-launch fixes [thomasw]


0.4.2 (2012-04-17)
------------------

- Bugfix camp essentials [thomasw]


0.4.1 (2012-04-17)
------------------

- Fixed postgres DB creation code [thomasw]


0.4 (2012-04-17)
----------------

- Last fixes before the launch [pilz, thomasw]

0.3 (2012-04-16)
----------------

- Lots of additional work done for the launch [pilz, thomasw]


0.2 (2012-04-12)
----------------

- lots of work done for the launch [pilz, thomasw]

0.1 (2012-04-05)
----------------

- Added synchronisation receiver and display of synced data. Taken from ZODB
  code on OSHA production [thomasw]
- Added skins-dir hw2010, taken from ZODB code on OSHA production [thomasw]
